--- a/index2.html
+++ b/index2.html
@@ -256,13 +256,13 @@
            
                <div class="content2_right">
                    <ul>
-                       <li><img src="%E4%BD%99%E4%B8%8B%E8%B5%84%E6%BA%90%E8%8E%B7%E5%8F%96.jpg"></li>
+                       <li><img src="chanpin-pic.png"></li>
                    </ul>
                    <ul>
-                       <li><img src="%E4%BD%99%E4%B8%8B%E8%B5%84%E6%BA%90%E8%8E%B7%E5%8F%96.jpg"></li>
+                       <li><img src="chanpin-pic.png"></li>
                    </ul>
                    <ul>
-                       <li><img src="%E4%BD%99%E4%B8%8B%E8%B5%84%E6%BA%90%E8%8E%B7%E5%8F%96.jpg"></li>
+                       <li><img src="chanpin-pic.png"></li>
                    </ul>
                </div>
             </div>
