--- a/index2.html
+++ b/index2.html
@@ -267,6 +267,7 @@
                </div>
             </div>
         </div>
+        <div>git checkout x</div>
     </div>
     <script>
         $(function(){$(".gouwuche").mouseover(function(){$(".gouwuche img").attr("src","gouwuche-huang.png");
